--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "webpack-merge": ">=4.2.1"
   },
   "dependencies": {
+    "@material-ui/core": "^4.4.3",
+    "@material-ui/icons": "^4.4.3",
     "airbnb-browser-shims": ">=3.1.0",
     "babel-polyfill": ">=6.26.0",
     "body-parser": ">=1.18.3",
