--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "eslint-config-fbjs": ">=2.1.0",
     "express": ">=4.16.4",
     "express-react-views": "^0.11.0",
+    "fast-sort": "^1.5.6",
     "immutable": ">=4.0.0-rc.12",
     "method-override": "^3.0.0",
     "pg": "^7.8.0",
